--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | BlackHatNotes</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact | BlackHatNotes</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-black text-white">
-    <header class="bg-black p-5 shadow fixed w-full z-50">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl text-green-400 font-bold">BlackHatNotes</h1>
-            <nav class="space-x-6">
-                <a href="index.html" class="hover:text-green-400">Home</a>
-                <a href="notes.html" class="hover:text-green-400">Notes</a>
-                <a href="services.html" class="hover:text-green-400">Services</a>
-                <a href="about.html" class="hover:text-green-400">About</a>
-                <a href="contact.html" class="hover:text-green-400">Contact</a>
-            </nav>
-        </div>
-    </header>
+  <header class="bg-black p-5 shadow fixed w-full z-50">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-2xl text-green-400 font-bold">BlackHatNotes</h1>
+      <nav class="space-x-6">
+        <a href="index.html" class="hover:text-green-400">Home</a>
+        <a href="notes.html" class="hover:text-green-400">Notes</a>
+        <a href="services.html" class="hover:text-green-400">Services</a>
+        <a href="about.html" class="hover:text-green-400">About</a>
+        <a href="contact.html" class="hover:text-green-400">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <section class="container mx-auto px-6 py-24 text-center">
-        <h1 class="text-4xl font-bold text-green-300 mb-6">Contact Us</h1>
-        <form class="max-w-xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg" action="/submit" method="post">
-            <label for="name" class="block text-left text-gray-300">Full Name</label>
-            <input id="name" type="text" name="name" required class="w-full p-3 mt-2 bg-gray-700 text-gray-300 rounded-md">
+  <section class="container mx-auto px-6 py-24 text-center">
+    <h1 class="text-4xl font-bold text-green-300 mb-6">Contact Us</h1>
 
-            <label for="email" class="block text-left text-gray-300 mt-6">Email</label>
-            <input id="email" type="email" name="email" required class="w-full p-3 mt-2 bg-gray-700 text-gray-300 rounded-md">
+    <!-- Success Message Container -->
+    <div id="success-message" class="hidden bg-green-700 text-white p-4 rounded-lg mb-6 max-w-xl mx-auto">
+      ✅ Thanks for reaching out! We’ve received your message and will get back to you shortly.
+    </div>
 
-            <label for="message" class="block text-left text-gray-300 mt-6">Message</label>
-            <textarea id="message" name="message" rows="5" required class="w-full p-3 mt-2 bg-gray-700 text-gray-300 rounded-md"></textarea>
+    <form id="contact-form" action="https://formspree.io/f/mgvadgzv" method="POST"
+      class="max-w-xl mx-auto bg-gray-900 p-8 rounded-xl shadow-lg">
+      
+      <input type="hidden" name="_subject" value="New BlackHatNotes Inquiry">
+      <input type="hidden" name="_captcha" value="false">
 
-            <button type="submit" class="bg-green-500 hover:bg-green-600 text-black font-bold py-3 px-6 mt-6 rounded-lg shadow-lg transition-all">
-                Submit
-            </button>
-        </form>
-    </section>
+      <label for="name" class="block text-left text-gray-300">Full Name</label>
+      <input id="name" type="text" name="name" required class="w-full p-3 mt-2 bg-gray-700 text-gray-300 rounded-md">
 
-    <footer class="bg-black text-center text-gray-300 py-4">
-        <p>&copy; 2025 BlackHatNotes - All Rights Reserved</p>
-    </footer>
+      <label for="email" class="block text-left text-gray-300 mt-6">Email</label>
+      <input id="email" type="email" name="email" required class="w-full p-3 mt-2 bg-gray-700 text-gray-300 rounded-md">
+
+      <label for="message" class="block text-left text-gray-300 mt-6">Message</label>
+      <textarea id="message" name="message" rows="5" required class="w-full p-3 mt-2 bg-gray-700 text-gray-300 rounded-md"></textarea>
+
+      <button type="submit" class="bg-green-500 hover:bg-green-600 text-black font-bold py-3 px-6 mt-6 rounded-lg shadow-lg transition-all">
+        Submit
+      </button>
+    </form>
+  </section>
+
+  <footer class="bg-black text-center text-gray-300 py-4">
+    <p>&copy; 2025 BlackHatNotes - All Rights Reserved</p>
+  </footer>
+
+  <!-- JS for showing success message -->
+  <script>
+    const form = document.getElementById("contact-form");
+    const successMessage = document.getElementById("success-message");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const formData = new FormData(form);
+      const response = await fetch(form.action, {
+        method: "POST",
+        body: formData,
+        headers: { 'Accept': 'application/json' }
+      });
+       if (response == 200) {
+        form.reset();
+        successMessage.classList.remove("hidden");
+      } else if (response.status == 400) {
+        alert("❌ There was an issue with your submission. Please check your input.");
+      } else if (response.status == 500) {
+        alert("❌ There was a server error. Please try again later.");
+      } else {
+        alert("❌ There was an unexpected error. Please try again.");
+       }
+      if (response.ok) {
+        form.reset();
+        successMessage.classList.remove("hidden");
+      } else {
+        alert("❌ There was an issue sending your message. Please try again.");
+      }
+    });
+  </script>
 </body>
 </html>
