--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | BlackHatNotes</title>
+  <title>Contact | BlackHatters</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-black text-white">
   <header class="bg-black p-5 shadow fixed w-full z-50">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl text-green-400 font-bold">BlackHatNotes</h1>
+      <h1 class="text-2xl text-green-400 font-bold">BlackHatters</h1>
       <nav class="space-x-6">
         <a href="index.html" class="hover:text-green-400">Home</a>
         <a href="notes.html" class="hover:text-green-400">Notes</a>
@@ -20,6 +20,7 @@
       </nav>
     </div>
   </header>
+
 
   <section class="container mx-auto px-6 py-24 text-center">
     <h1 class="text-4xl font-bold text-green-300 mb-6">Contact Us</h1>
@@ -51,7 +52,7 @@
   </section>
 
   <footer class="bg-black text-center text-gray-300 py-4">
-    <p>&copy; 2025 BlackHatNotes - All Rights Reserved</p>
+    <p>&copy; 2025 BlackHatters - All Rights Reserved</p>
   </footer>
 
   <!-- JS for showing success message -->
