--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlackHatNotes - Offensive Security & Red Teaming</title>
+    <title>BlackHatters - Offensive Security & Red Teaming</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-black text-white">
     <header class="bg-black p-5 shadow fixed w-full z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl text-green-400 font-bold">BlackHatNotes</h1>
+            <h1 class="text-2xl text-green-400 font-bold">BlackHatters</h1>
             <nav class="space-x-6">
                 <a href="index.html" class="hover:text-green-400">Home</a>
                 <a href="notes.html" class="hover:text-green-400">Notes</a>
@@ -26,7 +26,7 @@
             Offensive Security. Real Intelligence. Proven Results.
         </h1>
         <p class="text-xl text-gray-300 max-w-2xl mx-auto mb-8">
-            BlackHatNotes is your partner in red teaming, pentesting, exploit development, and cyber advisory. We help companies test defenses, train teams, and stay ten steps ahead of adversaries.
+            BlackHatters is your partner in red teaming, pentesting, exploit development, and cyber advisory. We help companies test defenses, train teams, and stay ten steps ahead of adversaries.
         </p>
         <a href="contact.html" class="bg-green-500 hover:bg-green-600 text-black font-bold py-3 px-6 rounded-lg shadow-lg transition-all">
             🔐 Schedule a Consultation
@@ -52,7 +52,7 @@
     </section>
 
     <footer class="bg-black text-center text-gray-300 py-4">
-        <p>&copy; 2025 BlackHatNotes - All Rights Reserved</p>
+        <p>&copy; 2025 BlackHatters - All Rights Reserved</p>
     </footer>
 
     <script src="script.js"></script>
