--- a/settings.html
+++ b/settings.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Settings | BlackHatNotes</title>
+  <title>Settings | BlackHatters</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 <body class="bg-gray-900 text-white">
   <header class="bg-black p-5">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl text-green-400 font-bold">BlackHatNotes</h1>
+      <h1 class="text-2xl text-green-400 font-bold">BlackHatters</h1>
       <nav class="space-x-6">
         <a href="index.html" class="hover:text-green-400">Home</a>
         <a href="notes.html" class="hover:text-green-400">Notes</a>
