--- a/scripts/contact.html
+++ b/scripts/contact.html
@@ -17,6 +17,7 @@
         <a href="services.html" class="hover:text-green-400">Services</a>
         <a href="about.html" class="hover:text-green-400">About</a>
         <a href="contact.html" class="hover:text-green-400">Contact</a>
+        <a href="mothersday.html" class="text-pink-400 font-semibold underline">❤️ Mother's Day</a>
       </nav>
     </div>
   </header>
