--- a/scripts/notes.html
+++ b/scripts/notes.html
@@ -22,6 +22,7 @@
                 <a href="services.html" class="text-gray-300 hover:text-green-400 transition duration-300 ease-in-out">Services</a>
                 <a href="about.html" class="text-gray-300 hover:text-green-400 transition duration-300 ease-in-out">About</a>
                 <a href="contact.html" class="text-gray-300 hover:text-green-400 transition duration-300 ease-in-out">Contact</a>
+                <a href="mothersday.html" class="text-pink-400 font-semibold underline">❤️ Mother's Day</a>
             </nav>
         </div>
     </header>
