--- a/scripts/services.html
+++ b/scripts/services.html
@@ -32,6 +32,8 @@
         <a href="services.html" class="hover:text-green-400 font-semibold underline">Services</a>
         <a href="about.html" class="hover:text-green-400">About</a>
         <a href="contact.html" class="hover:text-green-400">Contact</a>
+        <a href="mothersday.html" class="text-pink-400 font-semibold underline">❤️ Mother's Day</a>
+
       </nav>
     </div>
   </header>
