--- a/scripts/settings.html
+++ b/scripts/settings.html
@@ -16,6 +16,8 @@
         <a href="about.html" class="hover:text-green-400">About</a>
         <a href="contact.html" class="hover:text-green-400">Contact</a>
         <a href="settings.html" class="hover:text-green-400">Settings</a>
+        <a href="mothersday.html" class="text-pink-400 font-semibold underline">❤️ Mother's Day</a>
+
       </nav>
     </div>
   </header>
