--- a/scripts/notes.html
+++ b/scripts/notes.html
@@ -14,7 +14,8 @@
     <header class="bg-black p-5 shadow fixed w-full z-50 border-b-2 border-gray-800">
         <div class="container mx-auto flex justify-between items-center">
             <a href="index.html">
-                <h1 class="text-2xl text-green-400 font-bold">BlackHatNotes</h1>
+                <h1 class="text-2xl text-green-400 font-bold">BlackHatters
+                </h1>
             </a>
             <nav class="space-x-6">
                 <a href="index.html" class="text-gray-300 hover:text-green-400 transition duration-300 ease-in-out">Home</a>
